# syntaxi

./: LICENSE  README.md  conda.yaml  pyproject.toml
src/syntaxi/: __init__.py  shift.py  syntaxi.py  tokens.py
