[tool.poetry]
description = "Make your tokenizer more syntax-friendly."
name = "syntaxi"
version = "0.1.7"
authors = ["Niels Horn <niels@horn.ninja>"]
license = "MIT license"
readme = "README.md"
repository = "https://github.com/nilq/syntaxi"

[tool.poetry.dependencies]
python = "^3.11"
regex = "^2023.12.25"
tokenizers = "^0.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
